crates/typestate-pipeline/tests/ui/default_helper_without_default.stderr
error: `default_helper = <ident>` is only valid alongside `default = …`
 --> tests/ui/default_helper_without_default.rs:9:5
  |
9 |     #[field(required, default_helper = my_helper)]
  |     ^
